--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,17 @@
 {
 	"name": "Shorter URL",
 	"author": "Max Xu",
-	"description": "Get shorter URL for current website.",
-	"version": "0.1",
-	"permissions": ["tabs", "contextMenus", "webRequest", "webRequestBlocking", "*://*/*"],
+	"description": "Get shorter URL for current website",
+	"version": "0.2.0",
+	"permissions": ["activeTab", "contextMenus", "webRequest", "webRequestBlocking", "*://*/*"],
 	"background": {
 		"scripts": ["main.js"]
 	},
 	"icons": {
-		"128": "128.png",
 		"16": "16.png",
 		"32": "32.png",
-		"48": "48.png"
+		"48": "48.png",
+		"128": "128.png"
 	},
 	"manifest_version": 2
 }
